# dlroms

./: README.md  setup.cfg
src/dlroms/: cores.py  dnns.py  fespaces.py  ocp.py  roms.py
src/dlroms/.ipynb_checkpoints/: ocp-checkpoint.py
