[metadata]
name = dlroms - Matteo Tomasetto
version = 2.1.8
author = Matteo Tomasetto
author_email = matteo.tomasetto@polimi.it
description = A package for constructing Deep Learning based Reduced Order Models (DL-ROMs)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MatteoTomasetto/dlroms/
project_urls =
    Bug Tracker = https://github.com/MatteoTomasetto/dlroms/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ipython
    numpy
    matplotlib
    scipy
    torch
    imageio

[options.packages.find]
where = src
